[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "scikit-build-core>=0.5.0",
    "cmake",
    "ninja"
]
build-backend = "scikit_build_core.build"

[project]
name = "liquibook"
version = "2.0.1"
description = "Python wrapper for LiquiBook - Order Matching Engine and Market Data"
readme = "README_PYPI.md"
authors = [{ name = "Mike Kipnis", email = "mike.kipnis@gmail.com" }]
requires-python = ">=3.8"

[tool.scikit-build.cmake]
args = ["-DBUILD_PYTHON=ON", "-DLIQUIBOOK_SRC=src"]
